[tool.poetry]
name = "common-image-tools"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <federico.lanzani@outlook.com>"]
readme = "README.md"
packages = [{include = "common_image_tools"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

